--- a/about-us.html
+++ b/about-us.html
@@ -15,27 +15,13 @@
    </script>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>
-      about us
+      Biz haqimizda
    </title>
    <link rel="stylesheet" href="bootstrap.css" type="text/css" media="screen" />
    <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-   <!--[if lte IE 8]>
-<link rel="stylesheet"  href="menuie.css" type="text/css" media="screen"/>
-<link rel="stylesheet"  href="vmenuie.css" type="text/css" media="screen"/>
-<![endif]-->
    <script type="text/javascript" src="totop.js">
    </script>
-   <!--[if IE 7]>
-<style type="text/css" media="screen">
-#ttr_vmenu_items  li.ttr_vmenu_items_parent {margin-left:-16px;font-size:0px;}
-</style>
-<![endif]-->
-   <!--[if lt IE 9]>
-<script type="text/javascript" src="html5shiv.js">
-</script>
-<script type="text/javascript" src="respond.min.js">
-</script>
-<![endif]-->
+
 </head>
 
 <body class="About-Us">
@@ -115,12 +101,13 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p><span
-                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">About
-                                 Modern Estate</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">
+                              StudentHouse haqida
+                              </span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">Dapibus
-                                 elit etiam consequat viverra mus, placerat mauris temp or, iaculis leo malesuada
-                                 viverra molestie volutpat vivamus pellentesque ultrices ridiculus mollis.</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">
+                                 Bizning maqsadimiz talabar uchun talab darajasidagi ijara uylarni topish orqali ularni vaqtini ko'proq o'qish uchun sarflashlariga ko'maklashishdan iboratdir.
+                              </span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -133,14 +120,13 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p style="line-height:1.54929577464789;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">Tincidunt
-                                 vestibulum nunc porttitor sapien accumsan conubia eleifend. Nibh eu nibh nunc, nam
-                                 adipiscing Hac parturient convallis a nisl dolor ornare odio hyme naeos vitae enim
-                                 pulvinar. Tincidunt dapibus tempus metus nullam velit aenean. Tempor. Nam, malesuada mi
-                                 dapibus pellentesque. Natoque dui vehicula. Nisl ornare duis nullam phasellus est
-                                 facilisis sodales augue class dictum eget vitae. Risus Quisque Commodo faucibus augue
-                                 netus facilisi molestie. Condimentum ullamcorper convallis ligula. Erat enim luctus
-                                 morbi maecenas.</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">
+                                 Sizga arzon, o'qishingiz uchun yaqin hamda hamma sharoitlarga ega ijaraga uy kerakmi
+                                 unda aynan biz sizga yordam bera olamiz.
+                                 Qiymati baland o'zi past maklerlar esa bizda aslo yo'q. Oldinda to'lov talab qilish,
+                                 kunlik bezovta qilishlar yo'q.
+                                 Biz sizga hammasini muhayyo qilamiz, sizdan esa shunchaki biz bilan bog'lanish talab
+                                 etiladi.</span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -156,7 +142,7 @@
                         <div class="html_content">
                            <p><span class="ttr_image"
                                  style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img
-                                       class="ttr_uniform" src="images/14.jpg"
+                                       class="ttr_uniform" src="images/HomeDesktopSlide1.jpg"
                                        style="max-width:600px;max-height:397px;" /></span></span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -169,21 +155,19 @@
                      <div class="ttr_About-Us_html_column11">
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
-                           <p><span style="font-family:'Titillium Web','Arial';font-size:2.571em;">We Are The Best In
-                                 This Field</span></p>
+                           <p><span style="font-family:'Titillium Web','Arial';font-size:2.571em;">Siz aynan kerakli joydasiz</span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">Quisque
-                                 nec est euismod, egestas lorem nec, volutpat nunc. Phasellus neque lectus, convallis
-                                 non consectetur non, molestie ac enim. Suspendisse et tincidunt urna.</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">
+                              Biz siz haqingizda qayg'uramiz
+                              </span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;line-height:1.69014084507042;"><span
-                                 style="font-family:'Roboto','Arial Black';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">Maecenas
-                                 volutpat, diam enim sagittis quam, id fermentum nibh volutpat, accumsan purus.Etiam sit
-                                 amet fringilla lacus. Pellentesque suscipit ante at pulvinar neque porttitor. Integer
-                                 lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel
-                                 ultricies purus.Etiam fringilla feugiat commodo habitant curabitur pulvinar imperdiet
-                                 sociis arcu luctus lorem maecenas nisi tellus pellentesque. Duis lacinia metus vivamus
-                                 orci magna montes imperdiet. Facilisi sociosqu. Morbi dui erat turpis vulputate nisi mi
-                                 pretium felis accumsan.</span></p>
+                                 style="font-family:'Roboto','Arial Black';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">
+                                 Sizga arzon, o'qishingiz uchun yaqin hamda hamma sharoitlarga ega ijaraga uy kerakmi
+                                 unda aynan biz sizga yordam bera olamiz.
+                                 Qiymati baland o'zi past maklerlar esa bizda aslo yo'q. Oldinda to'lov talab qilish,
+                                 kunlik bezovta qilishlar yo'q.
+                                 Biz sizga hammasini muhayyo qilamiz, sizdan esa shunchaki biz bilan bog'lanish talab
+                                 etiladi.</span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -201,13 +185,10 @@
                                  style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 3.57em 0em;"><span><img
                                        class="ttr_uniform" src="images/15.png"
                                        style="max-width:50px;max-height:50px;" /></span></span><span
-                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">Sagittis
-                                 vitae amet auctor fusce taciti varius sodales ultricies facilisis donec quam laoreet
-                                 condimentum quam congue nonummy potenti eleifend. Donec dui nascetur suscipit. Ligula
-                                 dictumst nisl vulputate porttitor lobortis.</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">Agar siz hayotni sevsangiz, vaqtni behuda o'tkazmang, chunki hayot vaqtdan iborat.</span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;text-align:Center;line-height:1.54929577464789;"><span
-                                 style="font-family:'Titillium Web','Arial';font-size:1.429em;color:rgba(53,53,53,1);">Martoa
-                                 Silva </span></p>
+                                 style="font-family:'Titillium Web','Arial';font-size:1.429em;color:rgba(53,53,53,1);">Bryus Li
+                                  </span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
