--- a/agents.html
+++ b/agents.html
@@ -19,23 +19,10 @@
    </title>
    <link rel="stylesheet" href="bootstrap.css" type="text/css" media="screen" />
    <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-   <!--[if lte IE 8]>
-<link rel="stylesheet"  href="menuie.css" type="text/css" media="screen"/>
-<link rel="stylesheet"  href="vmenuie.css" type="text/css" media="screen"/>
-<![endif]-->
+
    <script type="text/javascript" src="totop.js">
    </script>
-   <!--[if IE 7]>
-<style type="text/css" media="screen">
-#ttr_vmenu_items  li.ttr_vmenu_items_parent {margin-left:-16px;font-size:0px;}
-</style>
-<![endif]-->
-   <!--[if lt IE 9]>
-<script type="text/javascript" src="html5shiv.js">
-</script>
-<script type="text/javascript" src="respond.min.js">
-</script>
-<![endif]-->
+
 </head>
 
 <body class="Agents">
@@ -115,12 +102,11 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p style="margin:0.36em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">Make
-                                 Sure Your Dreams Are In Trusted Hands.</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">
+                                 Biz sizga ishonchli va sifatli xizmat taklif qilamiz</span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">Quam
-                                 malesuada commodo justo Rutrum, urna metus turpis augue per cras magna pellentesque.
-                                 Dictumst sociosqu.</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);"> 
+                                 Butun O'zbekiston bo'ylab agentlarimiz aynan siz uchun uy qidirishadi</span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -133,15 +119,13 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p style="line-height:1.54929577464789;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">Magna
-                                 sollicitudin dapibus volutpat faucibus odio proin tincidunt justo justo quam vitae
-                                 blandit hac vivamus, neque per accumsan. Aenean senectus. Facilisi donec consectetuer
-                                 platea. Sociosqu. Egestas augue Conubia sapien fringilla gravida neque augue ipsum Ante
-                                 condimentum pulvinar dignissim egestas ornare nostra tempus hymenaeos lacus quisque.
-                                 Aptent semper malesuada vel. Litora dictum duis dictumst quisque elementum varius Risus
-                                 penatibus sem eleifend. Cubilia ligula tortor. Massa posuere blandit ultrices ultrices
-                                 curabitur nostra gravida integer diam metus. A Fringilla. Mus phasellus pretium
-                                 consequat. Magna urna taciti magna euismod, facilisis urna.</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">
+                                 Sizga arzon, o'qishingiz uchun yaqin hamda hamma sharoitlarga ega ijaraga uy kerakmi
+                                 unda aynan biz sizga yordam bera olamiz.
+                                 Qiymati baland o'zi past maklerlar esa bizda aslo yo'q. Oldinda to'lov talab qilish,
+                                 kunlik bezovta qilishlar yo'q.
+                                 Biz sizga hammasini muhayyo qilamiz, sizdan esa shunchaki biz bilan bog'lanish talab
+                                 etiladi.</span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -156,23 +140,20 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p style="margin:0.36em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">Antony
-                                 Iglesias</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">Sarvar Komilov
+                                 </span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">Commercial
-                                 Property Agents</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">
+                                 Xususiy mulklar bo'yicha agent</span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;line-height:1.54929577464789;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">Dictum
-                                 vel litora hac parturient condimentum torquent, imperdiet est lacus orci elit praesent.
-                                 Sed vivamus lectus posuere vulputate iaculis adipiscing nostra proin magna sodales enim
-                                 ullamcorper etiam purus turpis. Turpis adipiscing ut tristique mus cubilia porttitor,
-                                 interdum magnis urna hymenaeos.</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">
+                                 5 yildan ortiq tajribaga ega agent. </span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;line-height:1.54929577464789;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:500;font-size:1.071em;color:rgba(102,102,102,1);">Phone
-                                 :- +1 256 598 2564</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:500;font-size:1.071em;color:rgba(102,102,102,1);">Tel
+                                 :- +998 94 123 45 67</span></p>
                            <p style="line-height:1.54929577464789;"><span
                                  style="font-family:'Roboto','Arial';font-weight:500;font-size:1.071em;color:rgba(102,102,102,1);">Email
-                                 :- Antony@modernestate.com</span></p>
+                                 :- sarvar@gmail.com</span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -186,7 +167,7 @@
                         <div class="html_content">
                            <p><span class="ttr_image"
                                  style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img
-                                       class="ttr_uniform" src="images/23.jpg"
+                                       class="ttr_uniform" src="images/av1.png"
                                        style="max-width:250px;max-height:250px;" /></span></span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -203,7 +184,7 @@
                         <div class="html_content">
                            <p><span class="ttr_image"
                                  style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img
-                                       class="ttr_uniform" src="images/24.jpg"
+                                       class="ttr_uniform" src="images/av2.png"
                                        style="max-width:250px;max-height:250px;" /></span></span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -217,23 +198,20 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p style="margin:0.36em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">Rust
-                                 Cohle</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">Elbek Tohirov
+                                 </span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">Industrial
-                                 Property Agents</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">
+                                 Xususiy mulklar bo'yicha agent</span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;line-height:1.54929577464789;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">Dictum
-                                 vel litora hac parturient condimentum torquent, imperdiet est lacus orci elit praesent.
-                                 Sed vivamus lectus posuere vulputate iaculis adipiscing nostra proin magna sodales enim
-                                 ullamcorper etiam purus turpis. Turpis adipiscing ut tristique mus cubilia porttitor,
-                                 interdum magnis urna hymenaeos.</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">
+                                 3 yildan ortiq tajribaga ega xodim</span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;line-height:1.54929577464789;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:500;font-size:1.071em;color:rgba(102,102,102,1);">Phone
-                                 :- +1 256 789 5869</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:500;font-size:1.071em;color:rgba(102,102,102,1);">Tel
+                                 :- +998 94 123 45 67</span></p>
                            <p style="margin:0.36em 0em 0.36em 0em;line-height:1.54929577464789;"><span
                                  style="font-family:'Roboto','Arial';font-weight:500;font-size:1.071em;color:rgba(102,102,102,1);">Email
-                                 :- Rust@modernestate.com</span></p>
+                                 :- elbek@gmail.com</span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -248,23 +226,20 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p style="margin:0.36em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">Tilvar
-                                 Claudiu</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">Zuhra Olimova
+                                 </span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">Residential
-                                 Property Agents</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">
+                                 Xususiy mulklar bo'yicha agent</span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;line-height:1.54929577464789;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">Dictum
-                                 vel litora hac parturient condimentum torquent, imperdiet est lacus orci elit praesent.
-                                 Sed vivamus lectus posuere vulputate iaculis adipiscing nostra proin magna sodales enim
-                                 ullamcorper etiam purus turpis. Turpis adipiscing ut tristique mus cubilia porttitor,
-                                 interdum magnis urna hymenaeos.</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">
+                                 5 yildan ortiq tajribaga ega mutaxasis</span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;line-height:1.54929577464789;"><span
                                  style="font-family:'Roboto','Arial';font-weight:500;font-size:1.071em;color:rgba(102,102,102,1);">Phone
-                                 :- +1 256 789 6985</span></p>
+                                 :- +998 94 123 45 67</span></p>
                            <p style="margin:0.36em 0em 0.36em 0em;line-height:1.54929577464789;"><span
                                  style="font-family:'Roboto','Arial';font-weight:500;font-size:1.071em;color:rgba(102,102,102,1);">Email
-                                 :- Tilvar@modernestate.com</span></p>
+                                 :- zuhra@gmail.com</span></p>
                            <p>&nbsp;</p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -279,7 +254,7 @@
                         <div class="html_content">
                            <p><span class="ttr_image"
                                  style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img
-                                       class="ttr_uniform" src="images/25.jpg"
+                                       class="ttr_uniform" src="images/av3.png"
                                        style="max-width:250px;max-height:250px;" /></span></span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -310,23 +285,20 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p style="margin:0.36em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">Markus
-                                 Doe</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">Tamara Karimova
+                                 </span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">Villas
-                                 &amp; Cottage Property Agent</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">
+                                 Xususiy mulklar bo'yicha agent</span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;line-height:1.54929577464789;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">Dictum
-                                 vel litora hac parturient condimentum torquent, imperdiet est lacus orci elit praesent.
-                                 Sed vivamus lectus posuere vulputate iaculis adipiscing nostra proin magna sodales enim
-                                 ullamcorper etiam purus turpis. Turpis adipiscing ut tristique mus cubilia porttitor,
-                                 interdum magnis urna hymenaeos.</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">
+                                 3 yildan ortiq tajribaga ega hodim</span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;line-height:1.54929577464789;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:500;font-size:1.071em;color:rgba(102,102,102,1);">Phone
-                                 :- +1 256 789 5498</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:500;font-size:1.071em;color:rgba(102,102,102,1);">Tel
+                                 :- +998 94 321 654 987</span></p>
                            <p style="margin:0.36em 0em 0.36em 0em;line-height:1.54929577464789;"><span
                                  style="font-family:'Roboto','Arial';font-weight:500;font-size:1.071em;color:rgba(102,102,102,1);">Email
-                                 :- Markus@modernestate.com</span></p>
+                                 :- tamara@gmail.com</span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -345,14 +317,7 @@
       <footer id="ttr_footer">
          <div class="ttr_footer_bottom_footer">
             <div class="ttr_footer_bottom_footer_inner">
-               <div id="ttr_footer_designed_by_links">
 
-                  <span id="ttr_footer_designed_by">
-                     Designed By KixGO
-                  </span> <a href="http://www.kixgo.com" target="_self">
-                     Website Builder
-                  </a>
-               </div>
                <a href="#" class="ttr_footer_facebook" target="_self">
                </a>
                <a href="#" class="ttr_footer_twitter" target="_self">
