--- a/contact.html
+++ b/contact.html
@@ -102,12 +102,11 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p style="margin:0.36em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">Get
-                                 In Touch With Us.</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(53,53,53,1);">
+                                 Biz bilan oson bog'laning</span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;"><span
-                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">Posuere
-                                 mus risus amet Fames. Quis dictum donec natoque. Dictum vel litora hac parturient
-                                 condimentum torquent, imperdiet est lacus orci elit praesent.</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">
+                                 Sizning har bir so'rovingiz javobsiq qoldirilmaydi</span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -120,13 +119,10 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p style="line-height:1.54929577464789;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">Tellus
-                                 felis vel ullamcorper molestie enim vel Libero rutrum nibh bibendum nascetur libero
-                                 netus vivamus conubia. Habitasse euismod, pede nascetur euismod hendrerit lacus ac.
-                                 Eleifend. Condimentum nec rhoncus vulputate tellus curabitur taciti odio leo imperdiet
-                                 arcu eros mollis senectus. Lacinia augue.Posuere aptent sodales aptent turpis hac eros
-                                 fermentum cras morbi quis morbi curae;. Montes congue convallis dui. Posuere mus risus
-                                 amet Fames. Quis dictum donec natoque.</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">
+                                 Biz call markazimiz uchun alohida saralab olingan hodimlarni qo'yganmiz va ular sizga o'z vaqtida aniq ma'lumotlar bera olishadi.
+                                 Call markaz hodimidan siz uchun qiziq bo'lgan barcha ma'lumotlarni olishingiz mumkin
+                              </span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -141,12 +137,12 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p><span
-                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(255,111,5,1);">Contact
-                                 Form</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(255,111,5,1);">Aloqa uchun
+                                 </span></p>
                            <p style="margin:2.14em 0em 0.36em 0em;">
                               <form id="ContactForm0" class="form-horizontal" role="form" method="post" action=""
                                  style="padding:0px 0px 0px 0px;float:left;">
-                                 <div class="form-group"><label class="col-sm-4 control-label">Name</label>
+                                 <div class="form-group"><label class="col-sm-4 control-label">Ism</label>
                                     <div class="col-sm-8"><input type="text" class="form-control"
                                           data-vali="novalidation" /></div>
                                  </div>
@@ -154,18 +150,18 @@
                                     <div class="col-sm-8"><input type="text" class="form-control required"
                                           data-vali="email" /></div>
                                  </div>
-                                 <div class="form-group"><label class="col-sm-4 control-label">Subject</label>
+                                 <div class="form-group"><label class="col-sm-4 control-label">Ismingiz</label>
                                     <div class="col-sm-8"><input type="text" class="form-control"
                                           data-vali="novalidation" /></div>
                                  </div>
-                                 <div class="form-group"><label class="col-sm-4 control-label">Message</label>
+                                 <div class="form-group"><label class="col-sm-4 control-label">Xabar</label>
                                     <div class="col-sm-8"><textarea class="form-control comment" name="message"
                                           rows="4"></textarea></div>
                                  </div>
                                  <div class="form-group">
                                     <div class="col-sm-4 col-sm-offset-8"><input type="submit"
                                           class="pull-right btn btn-md btn-primary" rows="4" id="submit" name="submit"
-                                          value="Send Message" /></div>
+                                          value="Jo'natish" /></div>
                                  </div>
                                  <div class="clearfix"></div>
                                  <div class="success"></div>
@@ -186,22 +182,20 @@
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div class="html_content">
                            <p><span
-                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(255,111,5,1);">Contact
-                                 Info</span></p>
+                                 style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(255,111,5,1);">Qo'shimcha ma'lumotlar
+                                 </span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;line-height:1.54929577464789;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">Posuere
-                                 aptent sodales aptent turpis hac eros fermentum cras morbi quis morbi curae.Dictum vel
-                                 litora hac parturient condimentum torquent, imperdiet est lacus orci elit
-                                 praesent.</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:300;font-size:1.143em;color:rgba(102,102,102,1);">
+                                 Sizlar uchun doim eshiklarimiz ochiq. 7/24 ish tartibida ishlaymiz.</span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:500;font-size:1.143em;color:rgba(102,102,102,1);">Schönhauser
-                                 Allee 167c</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:500;font-size:1.143em;color:rgba(102,102,102,1);">
+                                 Mustaqillik 136-uy</span></p>
                            <p><span
                                  style="font-family:'Roboto','Arial';font-weight:500;font-size:1.143em;color:rgba(102,102,102,1);">10435
-                                 Berlin,Germany</span></p>
+                                 Farg'ona, Uzbekiston</span></p>
                            <p style="margin:1.43em 0em 0.36em 0em;"><span
-                                 style="font-family:'Roboto','Arial';font-weight:500;font-size:1.143em;color:rgba(102,102,102,1);">Phone
-                                 :- +1 256 234 2525</span></p>
+                                 style="font-family:'Roboto','Arial';font-weight:500;font-size:1.143em;color:rgba(102,102,102,1);">Tel
+                                 :- +94 123 45 67</span></p>
                            <p><span
                                  style="font-family:'Roboto','Arial';font-weight:500;font-size:1.143em;color:rgba(102,102,102,1);">Email
                                  :- demo@gmail.com</span></p>
@@ -223,14 +217,6 @@
       <footer id="ttr_footer">
          <div class="ttr_footer_bottom_footer">
             <div class="ttr_footer_bottom_footer_inner">
-               <div id="ttr_footer_designed_by_links">
-
-                  <span id="ttr_footer_designed_by">
-                     Designed By KixGO
-                  </span> <a href="http://www.kixgo.com" target="_self">
-                     Website Builder
-                  </a>
-               </div>
                <a href="#" class="ttr_footer_facebook" target="_self">
                </a>
                <a href="#" class="ttr_footer_twitter" target="_self">
